# ComfyUI-PolotnoCanvasEditor

./: .gitignore  README.md  README_CN.md  __init__.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
js/: main.js  main.js.map
js/assets/: main-3GdYgt5X.css  main-BYefmFbN.css  main-BbT5Md1z.css  main-_lQDNygA.css
locales/en/: main.json
locales/zh/: main.json
polotno-src/: app.jsx  index.html  package-lock.json  package.json  vite.config.js
polotno-ui/: index.html
polotno-ui/assets/: allPaths-CBoRmNQq.js  allPaths-C_9zAyYj.js  allPaths-DSFbvDQr.js  allPaths-DuyIcK5y.js  allPathsLoader-D1ICVp6k.js  allPathsLoader-D75Xbhvu.js  allPathsLoader-LN_jol6R.js  allPathsLoader-woRGBxfg.js  main-5lWomIqq.js  main-CBEeTMu4.js  main-Cgl9-_Ra.js  main-CngbDz-0.css  main-oaR5gXUB.js  splitPathsBySizeLoader-C-kx6KDU.js  splitPathsBySizeLoader-DLpXcx_d.js  splitPathsBySizeLoader-cCAVt7kh.js  splitPathsBySizeLoader-rOS8mUmI.js
src/: Root.vue  main.ts
src/components/: PolotnoEditor.vue
