[project]
name = "comfyui-polotno-canvas-editor"
description = "Integrates Polotno Canvas Editor into ComfyUI for advanced image editing and design"
version = "0.1.0"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/your-username/ComfyUI-PolotnoCanvasEditor"

[tool.comfy]
PublisherId = "jtydhr88"
DisplayName = "Polotno Canvas Editor"
Icon = ""
includes = ['js']
